--- a/login.html
+++ b/login.html
@@ -28,8 +28,8 @@
 <body>
     <form onsubmit="return validateForm()">
         <h3>Login</h3>
-        <input type="text" id="username" placeholder="Username" width="100%"><br><br>
-        <input type="password" id="password" placeholder="Password"><br><br>
+        <input type="text" id="username" placeholder="Username"><br>
+        <input type="password" id="password" placeholder="Password"><br>
         <button type="submit">Login</button>
     </form>
 </body>
